fix:fixes margin issue

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,8 +49,8 @@ const data = await fetch(
       </div>
     </div>
 
-    <span class="text-primary m-2">Projects</span>
-    <ul role="list" class="flex flex-wrap container mx-auto">
+    <span class="text-primary m-5">Projects</span>
+    <ul role="list" class="flex flex-wrap m-5 container mx-auto">
       {
         data.map(
           (repo: {
