feat(index.astro): adds skills sections

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html data-theme="dracula" lang="en">
+<html data-theme="coffee" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -26,15 +26,16 @@ const { title } = Astro.props;
       <img class="w-4 h-4" src={ampersand} alt="ampersand" />
       <a
         href="https://github.com/bradleygichuru"
-        class="text-secondary m-2">bradleygichuru</a
+        class="m-2 text-3xl font-bold text-primary">bradleygichuru</a
       >
     </div>
 
     <button class="btn btn-ghost">
-      <img class="w-4 h-4" src={github} alt="github" />
+      <img class="w-10 h-10" src={github} alt="github" />
       <a
         href="https://github.com/bradleygichuru/portfolio"
-        class="text-secondary m-2">source</a
+        class="text-3xl font-bold text-primary m-2">source
+      </a
       >
     </button>
   </div>
