--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,6 @@
 import Layout from "../layouts/Layout.astro";
 import twitter from "/icons8-twitter.svg";
 import github from "/icons8-github.svg";
-
 const data = await fetch(
   "https://gh-pinned-repos.egoist.dev/?username=bradleygichuru",
   {
@@ -17,33 +16,66 @@ const data = await fetch(
 <Layout title="Welcome to Astro.">
   <main>
     <div class="bg-neutral p-10 mx-5 rounded-xl">
-      <span class="mt-3 text-secondary font-extrabold">Bradley</span>
-      <p class="mt-3 text-secondary">Fullstack Developer and a Student</p>
-      <p class="mt-3 text-neutral-content">
-        Hello,I am Bradley Kabecha.I specialize in backend web development.I
-        have experience in web development and core javascript frameworks like
-        react and vue that are key on the front end of the web.I am also
-        proficient in nodejs and can create working backends for websites.I am
-        also literate in the field of cryptopgraphy that is the back bone of
-        upcoming technology like the blockchain.Since technology is still in
+      <span class="text-3xl font-bold text-primary">Bradley</span>
+      <p class="mt-3 text-secondary-content">Fullstack Developer and a Student</p>
+      <p class="mt-3 text-md font-medium md:text-xl custom:text-lg text-neutral-content">
+        Hello, I am Bradley Kabecha. I specialize in Full stack web development. My preferred stack is React for Frontend specifically using Nextjs,Mongodb and Mysql for database solution, express for lightweight backends and rust if a high perfomant backend is required. I mainly use typescript. Since technology is still in
         evolution state im receptive of change and willing to learn more as it
         changes.
       </p>
     </div>
+    
+    <div class="bg-neutral p-10 m-5 rounded-xl">
+      
+     <div class="my-16 px-3 font-sen text-white" id="skills">
+
+      <p class="text-3xl font-bold text-primary">Skills & Uses</p>
+
+      <div class="text-md my-8 flex flex-col font-medium md:text-xl custom:text-lg">
+        <p class="flex flex-row items-center border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
+          <span class="text-white">Typescript </span>
+          &nbsp;as my main language
+        </p>
+
+        <p class="flex flex-row items-center border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
+          <span class="text-white">NextJS</span>
+          &nbsp;as my Frontend Framework
+        </p>
+        <p class="flex flex-row items-center border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
+          <span class="text-white">AstroJS</span>
+          &nbsp;for static websites 
+        </p> 
+        <p class="flex flex-row items-center border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
+          <span class="text-white">Tailwind CSS </span>
+          &nbsp;as my CSS framework
+        </p>
+
+        <p class="flex flex-row items-center border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
+          <span class="text-white">Figma </span>
+          &nbsp;as my designing tool
+        </p>
+
+        <p class="flex flex-row items-center border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
+          <span class="text-white">Express JS </span>
+          &nbsp;as my API framework
+        </p>
+      </div>  
+    </div>
+    </div>
 
     <div class="flex m-5 flex-col">
-      <span class="text-primary m-2">Reach me</span>
+      <span class="text-3xl my-10 font-bold text-primary">Reach me</span>
 
       <div class="flex">
-        <img src={github} alt="github" />
-        <a href="https://github.com/bradleygichuru" class="text-secondary m-2"
+        <img src={github} class="w-10 h-10" alt="github" />
+        <a href="https://github.com/bradleygichuru" class="text-secondary-content m-2 "
           >@bradleygichuru</a
         >
       </div>
 
       <div class="flex">
         <img class="" src={twitter} alt="twitter" />
-        <a href="https://twitter.com/@0x00bradley" class="text-secondary m-2"
+        <a href="https://twitter.com/@0x00bradley" class="text-secondary-content m-2"
           >@0x00bradley</a
         >
       </div>
