changes my title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const data = await fetch(
   <main>
     <div class="bg-neutral p-10 mx-5 rounded-xl">
       <span class="text-3xl font-bold text-primary">Bradley</span>
-      <p class="mt-3 text-secondary-content">Fullstack Developer and a Student</p>
+      <p class="mt-3 text-secondary-content">Fullstack Developer </p>
       <p class="mt-3 text-md font-medium md:text-xl custom:text-lg text-neutral-content">
         Hello, I am Bradley Kabecha. I specialize in Full stack web development. My preferred stack is React for Frontend specifically using Nextjs,Mongodb and Mysql for database solution, express for lightweight backends and rust if a high perfomant backend is required. I mainly use typescript. Since technology is still in
         evolution state im receptive of change and willing to learn more as it
