--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,32 +32,42 @@ const data = await fetch(
       <p class="text-3xl font-bold text-primary">Skills & Uses</p>
 
       <div class="text-md my-8 flex flex-col font-medium md:text-xl custom:text-lg">
-        <p class="flex flex-row items-center border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
+        <p class="flex flex-row items-baseline border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
           <span class="text-white">Typescript </span>
           &nbsp;as my main language
         </p>
 
-        <p class="flex flex-row items-center border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
+        <p class="flex flex-row items-baseline border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
           <span class="text-white">NextJS</span>
           &nbsp;as my Frontend Framework
         </p>
-        <p class="flex flex-row items-center border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
+        <p class="flex flex-row items-baseline border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
           <span class="text-white">AstroJS</span>
           &nbsp;for static websites 
         </p> 
-        <p class="flex flex-row items-center border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
+        <p class="flex flex-row items-baseline border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
           <span class="text-white">Tailwind CSS </span>
           &nbsp;as my CSS framework
         </p>
 
-        <p class="flex flex-row items-center border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
+        <p class="flex flex-row items-baseline border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
           <span class="text-white">Figma </span>
           &nbsp;as my designing tool
         </p>
 
-        <p class="flex flex-row items-center border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
+        <p class="flex flex-row items-baseline border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
           <span class="text-white">Express JS </span>
           &nbsp;as my API framework
+        </p>
+<p class="flex flex-row items-baseline border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
+          <span class="text-white">React</span>
+          
+        </p>
+<p class="flex flex-row items-baseline border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
+          <span class="text-white">Angular</span>
+        </p>
+<p class="flex flex-row items-baseline border-b-[0.1px] border-gray-500 py-1 text-neutral-content">
+          <span class="text-white">Rust</span>
         </p>
       </div>  
     </div>
@@ -97,7 +107,7 @@ const data = await fetch(
             stars: string;
             forks: number;
           }) => (
-            <li class="m-2">
+            <li class="my-2 mx-auto">
               <div class="card w-72 card-compact bg-base-100 shadow-xl">
                 <figure>
                   {" "}
