--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,7 +86,7 @@ import Layout from "../layouts/Layout.astro";
               {
                 title: "Newwell",
                 description:
-                  "I was contracted to work in a team to develop q Music Aggregation and Artist Music Analytics platform",
+                  "I was contracted to work in a team to develop  Music Aggregation and Artist Music Analytics platform",
                 link: "https://web.newwell.app/",
               },
               {
