feat:adds new entry to portfolio projects

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,10 +90,15 @@ import Layout from "../layouts/Layout.astro";
                 link: "https://web.newwell.app/",
               },
               {
-                title: "Hiziticket",
+                title: "Hizitickets",
                 description: "A Event Ticket Vending Systems",
                 link: "https://hizitickets-t3.vercel.app",
               },
+{
+                title: "Towing guru",
+                description: "A price estimator for a small towing company based in the US",
+                link: "https://towingguru.net/",
+              }
             ].map((project, index) => (
               <Card key={index}>
                 <CardHeader>
