--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import Layout from "../layouts/Layout.astro";
             <div class="flex flex-col md:flex-row items-center gap-6">
               <p class="text-lg">
                 Hello, I am Bradley Kabecha, a full-stack developer that
-                specializes in web development.Since technology is still in evolution state I am
+                specializes in web development.Since technology is still in evolution state, I am
                 receptive of change and willing to learn more as it evolves.
               </p>
             </div>
