feat:adds skill

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ import Layout from "../layouts/Layout.astro";
       </section>
 
       <section class="mb-12">
-        <h2 class="text-2xl font-semibold mb-4">Skills</h2>
+        <h2 class="text-2xl font-semibold mb-4">kills</h2>
         <Card>
           <CardContent class="pt-6">
             <div class="flex flex-wrap gap-2">
@@ -64,7 +64,8 @@ import Layout from "../layouts/Layout.astro";
                   "Go",
                   "Typescript",
                   "Linux",
-                  "Sys Admin"
+                  "Sys Admin",
+                  "Devops"
 
                 ].map((skill) => (
                   <Badge class="m-2" variant="secondary">
