--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -165,7 +165,7 @@ import Layout from "../layouts/Layout.astro";
         <h2 class="text-2xl font-semibold mb-4">Contact</h2>
         <Card>
           <CardContent class="pt-6">
-            <div class="flex flex-col gap-4">
+            <div class="flex flex-col gap-4 my-4">
               <a
                 href="mailto:bradleygichuru@gmail.com"
                 class="flex items-center gap-2"
