--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -197,8 +197,8 @@ import Layout from "../layouts/Layout.astro";
       </section>
     </main>
 
-    <footer class="p-6 bg-primary text-primary-foreground mt-12 text-center">
-      <p>&copy; 2024 John Doe. All rights reserved.</p>
-    </footer>
+    <!-- <footer class="p-6 bg-primary text-primary-foreground mt-12 text-center"> -->
+    <!--   <p>&copy; 2024 John Doe. All rights reserved.</p> -->
+    <!-- </footer> -->
   </div>
 </Layout>
