update budgetlite correct url

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -98,7 +98,7 @@ import Layout from "../layouts/Layout.astro";
 {
                 title: "Budgetlite",
                 description: "An expense tracker and budgeting app tailored for the East African market",
-                link: "https://github.com/bradleygichuru/budgetlite-appcast/releases",
+                link: "https://budgetlite-nextjs.vercel.app/",
 		},
 
               {
